--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,20 @@
   <groupId>SkillRary</groupId>
   <artifactId>WWW02</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  
+  <build>
+  <plugins>
+  <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0-M5</version>
+        <configuration>
+          <suiteXmlFiles>
+            <suiteXmlFile>testng.xml</suiteXmlFile>
+          </suiteXmlFiles>
+        </configuration>
+      </plugin>
+  </plugins>
+  </build>
   <dependencies>
   
 
