--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,13 @@
     <version>1.9.13</version>
 </dependency>
 
+<dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>8.0.21</version>
+</dependency>
+
+
 <!-- https://mvnrepository.com/artifact/org.testng/testng -->
 <dependency>
     <groupId>org.testng</groupId>
